BI-54 : fix tetxt align

--- a/src/app/components/Footer/Footer.css
+++ b/src/app/components/Footer/Footer.css
@@ -13,6 +13,8 @@
   flex-wrap: wrap;
   justify-content: centre;
   margin: 0px 5px;
+  align-items: center;
+  text-align: center;
 }
 .right {
   display: flex;
